[gd_scene load_steps=21 format=3 uid="uid://bnk4qwr531lrr"]

[ext_resource type="Script" path="res://Scenes/UI/main_menu.gd" id="1_2cy6r"]
[ext_resource type="Texture2D" uid="uid://du54saoaeg2v5" path="res://art/1bit/background/OgSEhkif.png" id="2_c0bsd"]
[ext_resource type="Resource" uid="uid://bppubvq5o6we1" path="res://Scenes/Run/run_startup.tres" id="3_6nrva"]
[ext_resource type="Texture2D" uid="uid://btvk06rfbncc" path="res://art/1bit/orcoArt/Testeo character1 001.png" id="3_048iv"]
[ext_resource type="Texture2D" uid="uid://dcbgo4yh1nktj" path="res://art/1bit/orcoArt/Arquero 1.png" id="4_3u3ch"]
[ext_resource type="Shader" path="res://Scenes/Battle/CrtShader.gdshader" id="4_mrygs"]
[ext_resource type="PackedScene" uid="uid://dqeh5nty43nu7" path="res://Scenes/UI/torch.tscn" id="5_5owke"]
[ext_resource type="FontFile" uid="uid://c3ns0nhty0opb" path="res://art/alagard.ttf" id="5_ridyb"]
[ext_resource type="Texture2D" uid="uid://bjrxwc4q0jehb" path="res://art/1bit/orcoArt/Mago 1.png" id="5_tyfnm"]
[ext_resource type="Texture2D" uid="uid://do6i51u216eop" path="res://art/1bit/orcoArt/Undead enemy4 001.png" id="7_hhdwu"]
[ext_resource type="Texture2D" uid="uid://bfqxe488vy0" path="res://art/1bit/orcoArt/Undead enemy5 001.png" id="7_i47pg"]
[ext_resource type="Texture2D" uid="uid://djona7wqs1efl" path="res://art/1bit/orcoArt/Undead enemy3 001.png" id="8_boktj"]
[ext_resource type="Texture2D" uid="uid://bnvt1kcxt5cgk" path="res://art/1bit/orcoArt/Undead enemy6 001.png" id="9_87r54"]
[ext_resource type="Texture2D" uid="uid://tqyib1drb0u7" path="res://art/1bit/orcoArt/Testeo enemy2 001.png" id="11_118ha"]

[sub_resource type="LabelSettings" id="LabelSettings_reaam"]
line_spacing = 5.0
font = ExtResource("5_ridyb")
font_size = 48
font_color = Color(0.105882, 0.992157, 1, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(3, 1)

[sub_resource type="Animation" id="Animation_wgfis"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_sd6vq"]
resource_name = "fade_in"

[sub_resource type="Animation" id="Animation_mhcjx"]
resource_name = "fade_out"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6ie85"]
_data = {
"RESET": SubResource("Animation_wgfis"),
"fade_in": SubResource("Animation_sd6vq"),
"fade_out": SubResource("Animation_mhcjx")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kuhyv"]
shader = ExtResource("4_mrygs")
shader_parameter/resolution = Vector2(1280, 720)
shader_parameter/scan_line_amount = 0.144
shader_parameter/warp_amount = 0.0
shader_parameter/noise_amount = 0.09
shader_parameter/interference_amount = 0.2
shader_parameter/grille_amount = 0.1
shader_parameter/grille_size = 1.0
shader_parameter/vignette_amount = 0.6
shader_parameter/vignette_intensity = 0.4
shader_parameter/aberation_amount = 0.5
shader_parameter/roll_line_amount = 0.3
shader_parameter/roll_speed = 1.0
shader_parameter/scan_line_strength = -6.519
shader_parameter/pixel_strength = -1.5

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_2cy6r")
run_startup = ExtResource("3_6nrva")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_c0bsd")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="torch" parent="." instance=ExtResource("5_5owke")]
position = Vector2(29, 26)
scale = Vector2(2, 2)

[node name="torch2" parent="." instance=ExtResource("5_5owke")]
position = Vector2(368, 25)
scale = Vector2(2, 2)
frame_progress = 0.3646

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.0
offset_top = -74.0
offset_right = 204.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
text = "Spooky Pixels"
label_settings = SubResource("LabelSettings_reaam")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = 16.5
offset_right = 50.0
offset_bottom = 76.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="Continue" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
theme_override_font_sizes/font_size = 0
text = "Continue"

[node name="New Run" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
text = "New Run"

[node name="Exit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
text = "Exit
"

[node name="Player2" type="Sprite2D" parent="."]
position = Vector2(108, 169)
scale = Vector2(2, 2)
texture = ExtResource("4_3u3ch")

[node name="Player3" type="Sprite2D" parent="."]
position = Vector2(59, 211)
scale = Vector2(2, 2)
texture = ExtResource("5_tyfnm")

[node name="Player4" type="Sprite2D" parent="."]
position = Vector2(122, 223)
scale = Vector2(2, 2)
texture = ExtResource("3_048iv")

[node name="Enemy5" type="Sprite2D" parent="."]
position = Vector2(450, 178)
scale = Vector2(2, 2)
texture = ExtResource("7_hhdwu")

[node name="Enemy2" type="Sprite2D" parent="."]
position = Vector2(365, 180)
scale = Vector2(2, 2)
texture = ExtResource("7_i47pg")

[node name="Enemy3" type="Sprite2D" parent="."]
position = Vector2(405, 195)
scale = Vector2(2, 2)
texture = ExtResource("8_boktj")

[node name="Enemy4" type="Sprite2D" parent="."]
position = Vector2(381, 233)
scale = Vector2(2, 2)
texture = ExtResource("9_87r54")

[node name="Enemy6" type="Sprite2D" parent="."]
position = Vector2(452, 221)
scale = Vector2(2, 2)
texture = ExtResource("11_118ha")

[node name="transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6ie85")
}

[node name="ColorRect" type="ColorRect" parent="transition"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.333333, 1, 1)

[node name="CRTShader" type="CanvasLayer" parent="."]
layer = 5
visible = false

[node name="ColorRect" type="ColorRect" parent="CRTShader"]
process_priority = 4
material = SubResource("ShaderMaterial_kuhyv")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/New Run" to="." method="_on_new_run_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="animation_finished" from="transition" to="." method="_on_transition_animation_finished"]
